icon alignment correct

--- a/Memory Game/css/app.css
+++ b/Memory Game/css/app.css
@@ -107,17 +107,3 @@ h1 {
   float: right;
   cursor: pointer;
 }
-li {
-  display: inline;
-  padding-right: 1em;
-}
-@media(max-width: 680px) {
-  ul {
-    -webkit-column-count: 2;
-    -moz-column-count: 2;
-    column-count: 2;
-  }
-  li {
-    display:block;
-  }
-}
